namespace ClassLibrary.Classes;

public class Treasure
{
    public Coordinates Location { get; set; }
    public int Value { get; set; }
}