@startuml
skinparam shadowing false
'left to right direction
'skinparam nodesep 5
'skinparam ranksep 5

class Ocean{
    wind direction
}
class Island{
    shorelines
}
class Ship{
    lifepool
    coordinates
}
class Player{
    name
    lifepool
    walk speed
    coordinates
}
class Treasure{
    value
    coordinates
}
class Weapon{
    range
    damage
}
class Projectile{
    direction
    coordinates
}
class Enemy{
    agent policy
    lifepool
    walk speed
    coordinates
}

Ocean "1" -- "*" Ship : sailed by >
Ocean "1" -- "1..*" Island : contains >

Island "1" -- "*" Player : roamed by >
Island "1" -- "*" Treasure : hides >
Island "1" -- "*" Enemy : roamed by >

Ship "1" -- "1" Weapon : attacks with >

Player "1" -- "1" Ship : sails >
Player "1" -- "2" Weapon : attacks with >
Player "1" -- "*" Treasure : collects >

Enemy "1" -- "2" Weapon : attacks with >
Enemy "1" -- "*" Treasure : collects >
Enemy "*" -- "*" Player : Chases >

Weapon "1" -- "1" Projectile : fires >

@enduml